#0: fix icon event listing on IE

--- a/src/modules/EventListing.scss
+++ b/src/modules/EventListing.scss
@@ -82,21 +82,24 @@
 			margin-bottom: 15px;
 			border-radius: 4px;
 			span {
-			  padding: 13px 10px 8px 30px;
+			  padding: 13px 10px 8px 12px;
 			  font-weight: $fw-bold;
 			  font-size: 14px;
 			  color: $greyColor;
 			  background-repeat: no-repeat;
 			  background-position: 6px center;
 			  background-size: 17px;
+        img {
+          display: inline-block;
+        }
+			  // &.date {
+				// // background-image: url('https://static.agilitycms.com/layout/img/ico/calendar-check-gray.svg');
+          
+			  // }
 
-			  &.date {
-				background-image: url('https://static.agilitycms.com/layout/img/ico/calendar-check-gray.svg')
-			  }
-
-			  &.time {
-				background-image: url('https://static.agilitycms.com/layout/img/ico/clock-gray.svg')
-			  }
+			  // &.time {
+				// // background-image: url('https://static.agilitycms.com/layout/img/ico/clock-gray.svg')
+			  // }
 			}
 		  }
 
